fix (ui): remove blank space on smaller screens

--- a/src/app/(frontend)/components/Home/LandingScreen.css
+++ b/src/app/(frontend)/components/Home/LandingScreen.css
@@ -43,7 +43,6 @@
     justify-content: center;
     align-items: center;
     gap: 2.5rem;
-    width: 100%; 
     padding: 0 2rem;
     z-index: 1;
 }
